# dir_analysis

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/dashboard/: ChartsGrid.tsx  DiscardSection.tsx  Explorer.tsx  FileList.tsx  StatsCards.tsx
src/components/layout/: Header.tsx
src/components/ui/: DragOverlay.tsx  LoadingOverlay.tsx
