[package]
name = "dir_analysis"
version = "0.1.0"
description = "Analisador de diretórios"
authors = ["Manassés"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dir_analysis_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3.10"
once_cell = "1.19"
memchr = "2.7"
memmap2 = "0.9"

